--- a/Docs/Tesi/Tesi.tex
+++ b/Docs/Tesi/Tesi.tex
@@ -93,6 +93,8 @@ technology transfer activities
 \label{analisi}
 \input{introduzione_analisi}
 \section{Modello}
+Il Modello di Dominio dell'applicazione è costituito da due parti \textquoteleft ortogonali' tra loro: il \textsl{Modello di Business},
+che descrive la \textquoteleft Business Logic' dell'applicazione, e il \textsl{Modello degli Utenti}, che rappresenta gli utenti e i ruoli ad essi associati.
 \input{modello_business}
 \input{modello_utenti}
 \section{Casi d'uso}
