--- a/Docs/Tesi/introduzione_dietro_le_quinte.tex
+++ b/Docs/Tesi/introduzione_dietro_le_quinte.tex
@@ -1,1 +1,2 @@
-Questo capitolo descrive come il sistema reagisce internamente all'input dell'utente. È rivolto soprattutto a chi avrà a che fare con l'ampliamento delle funzionalità dell'applicazione, perché si focalizza non tanto su \emph{cosa} fa il programma, ma sul \emph{come} lo fa.
+In questo capitolo sono raccolti una serie di problemi incontrati durante la scrittura del codice dell'applicativo. Per ogni problema, dopo una breve introduzione, si descrive la soluzione adottata. Tale descrizione
+cerca di essere sufficientemente generale pur scendendo nei dettagli.
