--- a/Docs/Tesi/introduzione_tecnologie.tex
+++ b/Docs/Tesi/introduzione_tecnologie.tex
@@ -1,2 +1,5 @@
-L'applicativo sviluppato si basa sulla piattaforma \textsl{Java EE}, la quale utilizza alcuni framework che gestiscono vari aspetti dell'architettura. In particolare, \textsl{JPA} - acronimo per \textsl{Java Persistence API} - si occupa della persistenza dei dati; \textsl{Java Server Faces}, o \textsl{JSF}, si occupa del cosiddetto \textsl{Presentation Layer} dell'applicazione, ovvero dell'interfaccia utente; \textsl{CDI}, ovvero \textsl{Context and Dependency Injection}, è un grande aiuto nello sviluppo generale dell'applicazione, permettendo di gestire in maniera semplice ed efficace le relazioni tra i vari componenti dell'applicazione; infine \textsl{Deltaspike} si occupa della gestione dei ruoli e dei permessi degli utenti dell'applicazione.\newline
+L'applicativo sviluppato si basa sulla piattaforma \textsl{Java EE}, la quale contiene alcuni framework che gestiscono vari aspetti dell'architettura.
+In particolare, \textsl{JPA} - acronimo per \textsl{Java Persistence API} - si occupa della persistenza dei dati; \textsl{Java Server Faces}, o \textsl{JSF}, si occupa del cosiddetto \textsl{Presentation Layer} dell'applicazione,
+ovvero dell'interfaccia utente; \textsl{CDI}, ovvero \textsl{Context and Dependency Injection}, permette di gestire in maniera semplice ed efficace le dipendenze tra i vari componenti dell'applicazione e il loro ciclo di vita;
+infine \textsl{Deltaspike} si occupa della gestione dei ruoli e dei permessi degli utenti dell'applicazione. Come application server è stato scelto \textsl{JBoss AS}.\newline
 Ognuno dei framework sopra menzionati viene discusso più in dettaglio nel seguito. La parte finale del capitolo è invece dedicata alla descrizione di librerie di terze parti utilizzate nell'applicazione.
