--- a/Docs/Tesi/jldap.tex
+++ b/Docs/Tesi/jldap.tex
@@ -19,7 +19,7 @@ I parametri più interessanti di questo metodo sono:
   Serve per specificare i criteri di ricerca: si specificano i valori di alcuni attributi dell'entità cercata.
 \end{itemize}
 
-Il risultato di questa operazione è una entità che, per esempio, può essere rappresentata così:
+Il risultato di questa operazione è un' entità che, per esempio, può essere rappresentata così:
 
 \begin{lstlisting}
 dn: uid=D064678,ou=docenti,ou=personale,ou=people,dc=unifi,dc=it
